<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JustWaker</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="contacts_email">org.feather@gmail.com</string>

    <string name="action_about">About the program</string>

    <string name="btBack">Back</string>
    <string name="btSaveAndBack">Apply</string>
    <string name="btClose">OK</string>

    <string name="title_activity_add_alarm">Add Alarm</string>
    <string name="btAddAlarm">Add Alarm</string>

    <string name="btCancelAll">Cancel All Alarms</string>

    <string name="about_title">About the program</string>
    <string name="about_text">Alarm Clock\n* Wake up with selected phrase\n* Skip holidays</string>
    <string name="note_text">Note\n* Phrase should be on the defauld system language\n* Only existing words could be used\n* Some old Android versions could not support some languages then phrase in English should be used</string>
    <string name="dev_text">Development: Hanna Aliakseichykava\nQuality assurance: Zoya Aliakseichykava\nHolidays feature idea: Tatsiana Viarshkoyskaya</string>
    <string name="contacts_text">Feedback:</string>

    <string name="btStart">Set up Alarm Clock</string>

    <string name="edit_alarm_title">Edit Alarm</string>
    <string name="btSaveCorrectedAlarm">Save Alarm</string>

    <string name="isWeeklyAlarm">Weekly alarm</string>
    <string name="btCalendar">Deselect holidays</string>
    <string name="newAlarmLabelInfo">Set up a Label</string>
    <string name="newAlarmLabel">New Alarm</string>
    <string name="newAlarmPhraseInfo">Set up a phrase</string>
    <string name="newAlarmPhrase">Wakey Wakey</string>

</resources>
