<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/background_color">

      <LinearLayout android:layout_height="match_parent"
android:layout_width="match_parent" android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools">

    <TextView 
        android:id="@+id/correct_alarm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_alarm_title"
        android:textSize="15sp"
        android:paddingBottom="5dp"
     />

    <Spinner android:id="@+id/spinEditSelectedDay" android:layout_width="fill_parent" android:layout_height="wrap_content">
    </Spinner>

    <TimePicker android:id="@+id/tpEditSelectedTime"
        android:layout_width="wrap_content" android:layout_height="wrap_content" >
    </TimePicker>

    <TextView 
        android:id="@+id/correct_label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmLabelInfo"
        android:textSize="15sp"
        android:paddingBottom="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

     <EditText
        android:id="@+id/in_correct_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmLabel"
        android:layout_below="@+id/correct_label_text"
        android:layout_alignLeft="@+id/correct_label_text"
        android:layout_alignStart="@+id/correct_label_text" />

    <TextView android:id="@+id/correct_phrase_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmPhraseInfo"
        android:textSize="15sp"
        android:paddingBottom="5dp"
        android:layout_alignBottom="@+id/in_correct_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/in_correct_phrase"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmPhrase"
        android:layout_below="@+id/correct_phrase_text"
        android:layout_alignLeft="@+id/correct_phrase_text"
        android:layout_alignStart="@+id/correct_phrase_text" />

    <Button
        android:id="@+id/btn_test_corrected_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btTestPhrase"
        android:onClick="testVoice"
        android:layout_below="@+id/in_correct_phrase"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox android:id="@+id/checkboxEditWeeklyAlarm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/isWeeklyAlarm"
      />

   <Button
              android:id="@+id/bt_edit_calendar"
              android:onClick="onClickOpenCalendarButton"
              android:layout_marginTop="20dp"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:padding="@dimen/padding_medium"
              android:text="@string/btCalendar"
            android:layout_below="@+id/btn_test_corrected_phrase"
            android:layout_alignLeft="@+id/btn_test_corrected_phrase"
            android:layout_alignStart="@+id/btn_test_corrected_phrase" />

    <Button 
        android:id="@+id/btSave"
        android:onClick="updateAlarm"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_medium"
        android:text="@string/btSaveCorrectedAlarm"
        android:layout_below="@+id/bt_edit_calendar"
        android:layout_alignLeft="@+id/bt_edit_calendar"
        android:layout_alignStart="@+id/bt_edit_calendar" />

</LinearLayout>

</ScrollView>