<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <LinearLayout android:id="@+id/weekDaysSelectionWrapper"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center">

    </LinearLayout>

    <TimePicker android:id="@+id/tpSelectedTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_short_margin"
        android:gravity="center">
    </TimePicker>

    <TextView android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmLabelInfo"
        android:textSize="15sp"
        android:paddingLeft="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/in_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmLabel"/>

    <LinearLayout android:id="@+id/testPhraseWrapper"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView android:id="@+id/text_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newAlarmPhraseInfo"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"/>

        <Button
            android:id="@+id/btn_test_phrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sound"
            android:onClick="testVoice"/>

    </LinearLayout>


    <EditText
        android:id="@+id/in_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmPhrase"/>


    <LinearLayout android:id="@+id/isWeeklyCheckboxWrapper"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <CheckBox android:id="@+id/checkboxWeeklyAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isWeeklyAlarm"/>

    </LinearLayout>

    <Button
        android:id="@+id/btCalendar"
        android:onClick="onClickOpenCalendarButton"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btCalendar"/>

</LinearLayout>