<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/background_color">

      <LinearLayout android:layout_height="match_parent"
android:layout_width="match_parent" android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools">

    <Spinner android:id="@+id/spinSelectedDay" android:layout_width="fill_parent" android:layout_height="wrap_content">
    </Spinner>

    <TimePicker android:id="@+id/tpSelectedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_short_margin">
    </TimePicker>

    <TextView android:id="@+id/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmLabelInfo"
        android:textSize="15sp"
        android:paddingBottom="@dimen/activity_short_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

     <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_label"
        android:text="@string/newAlarmLabel"
        android:layout_below="@+id/text_label"
        android:layout_alignLeft="@+id/text_label"
        android:layout_alignStart="@+id/text_label" />

    <TextView android:id="@+id/text_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newAlarmPhraseInfo"
        android:textSize="15sp"
        android:paddingBottom="5dp"
        android:layout_alignBottom="@+id/in_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/in_phrase"
        android:text="@string/newAlarmPhrase"
        android:layout_below="@+id/text_phrase"
        android:layout_alignLeft="@+id/text_phrase"
        android:layout_alignStart="@+id/text_phrase" />

    <Button
        android:id="@+id/btn_test_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/sound"
        android:text="@string/btTestPhrase"
        android:onClick="testVoice"
        android:layout_below="@+id/in_phrase"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/inner_button"/>

     <CheckBox android:id="@+id/checkboxWeeklyAlarm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/isWeeklyAlarm"
      />

    <Button 
        android:id="@+id/btCalendar"
        android:onClick="onClickOpenCalendarButton"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_medium"
        android:text="@string/btCalendar"
        android:layout_below="@+id/btTestPhrase"
        android:layout_alignLeft="@+id/btTestPhrase"
        android:layout_alignStart="@+id/btTestPhrase"
        android:background="@color/inner_button"/>

    <Button 
        android:id="@+id/btStart"
        android:onClick="setTimer"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_medium"
        android:text="@string/btStart"
        android:layout_below="@+id/btCalendar"
        android:layout_alignLeft="@+id/btCalendar"
        android:layout_alignStart="@+id/btCalendar"
        android:background="@color/redirect_button"/>

</LinearLayout>

</ScrollView>
